--- a/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/FormStaffReport/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MonthlyStatement.Models.FormStaffReport
+﻿﻿@model  MonthlyStatement.Models.FormStaffReport
 @using MonthlyStatement.Models
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,36 +11,38 @@
 
 @if (Session["faculty"] == null)
 {
-<div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
-    Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+        Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
+
+    </div>
     <div>
         <img src="~/assets/img/vlu/khoa.png" class="cangiua">
     </div>
-</div>
 }
 
 else if (ViewBag.CheckFormSta == true)
 {
-    
-<div class="#"  role="alert"style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px" >
-    CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
+
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+        CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
+
+
+    </div>
     <div>
         <img src="~/assets/img/vlu/fomm.png" class="cangiua">
-    </div>  
-    
-</div>
-   
- 
-    
+    </div>
+
+
 }
 else if (ViewBag.CheckReportSta == true)
 {
-<div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
-   BẠN ĐÃ BÁO CÁO THÁNG NÀY!    
-</div>
-<div>
-    <img src="~/assets/img/vlu/formm.png"class="cangiua">
-</div>
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
+        BẠN ĐÃ BÁO CÁO THÁNG NÀY!
+
+    </div>
+    <div>
+        <img src="~/assets/img/vlu/formm.png" class="cangiua">
+    </div>
 }
 else
 {
@@ -217,31 +219,16 @@ else
 
                                 <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
 
-                                @*<div class="accordion">
-                                        <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
-                                            <h4>
-                                                @(((char) (++j)).ToString()). MINH CHỨNG
-                                            </h4>
-                                            <div class="card-header-action">
-                                                <a data-collapse="#panel-body-Z" class="btn btn-icon" href="#"><i class="fas fa-plus"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-body collapse" id="panel-body-Z" data-parent="#accordion" style="">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                                                </div>
-                                                <div class="custom-file">
-                                                    <input type="file" class="custom-file-input" id="minhChungFile" aria-describedby="inputGroupFileAddon01">
-                                                    <label class="custom-file-label" for="inputGroupFile01">Chọn file minh chứng</label>
-                                                </div>
-                                                <p hidden id="validation-file" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                            </div>
-                                        </div>
-                                    </div>*@
-
+                                <div class="section-title mt-3" style="font-weight:bold">
+                                    <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="file" class="form-control" id="minhChungFile">
+                                    <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                                </div>
                                 <div class="text-right mt-3">
-                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailStaffAsync","NotificationStaff")">Lưu báo cáo</a>
+                                    <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailStaffAsync","NotificationStaff")">Lưu báo cáo</a>*@
                                 </div>
                             </div>
                         </div>
@@ -306,7 +293,7 @@ else
 
         if (check == true) {
             var formData = new FormData();
-            //formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
+            formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
             formData.append("data", datas.substring(0, datas.length - 1));
             formData.append("reportperiodid", $('#report_period_id').val());
 
@@ -334,7 +321,6 @@ else
         display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom:auto;
-        
+        margin-bottom: auto;
     }
 </style>
