--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -11,7 +11,7 @@
 
 @if (Session["faculty"] == null)
 {
-    <div class="#" role="alert">
+    <div class="" role="alert">
         Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
     </div>
     
@@ -324,6 +324,7 @@ else
         }
     });
 </script>
+
 <style>
     img.cangiua {
         display: block;
